--- a/Dark-Mode/index.html
+++ b/Dark-Mode/index.html
@@ -4,43 +4,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dark Mode Toggle</title>
+    <title>Dar Mode</title>
     <link rel="stylesheet" href="styles.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 </head>
 
 <body>
+    <div class="hero">
+        <nav>
+            <img src="/images/logo.png" alt="" class="logo">
+
+            <ul>
+                <li><a href="">HOME</a></li>
+                <li><a href="">ABOUT</a></li>
+                <li><a href="">PORTFOLIO</a></li>
+                <li><a href="">SERVICES</a></li>
+                <li><a href="">HIRE ME</a></li>
+
+            </ul>
+            <img src="/images/moon.png" id="icon" alt="">
+        </nav>
+        <div class="info">
+            <h1>I'm <span>Alok</span>Kumar</h1>
+            <p>This is my offical portfolio website to showcase my all works related to web <br>development and ui
+                design.</p>
+            <a href="">Download CV</a>
+        </div>
+
+        <div class="imgBox">
+            <img src="/images/pattern.png" alt="" class="backimg">
+            <img src="/images/girl.png" alt="" class="mainimg">
+        </div>
+
+        <div class="socialLinks">
+            <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+            <a href=""><i class="fa-brands fa-twitter"></i></a>
+
+        </div>
 
 
 
-    <button id="btn"><i id="icon" class="fa-solid fa-sun"></i></button>
+
+    </div>
+
 
     <script>
-        // Function to toggle dark mode
-        let btn = document.getElementById("btn");
         let icon = document.getElementById("icon");
 
-        btn.addEventListener("click", () => {
-
-            if (icon.classList.contains("fa-sun")) {
-                icon.classList.remove("fa-sun");
-                icon.classList.add("fa-moon");
-                document.body.style.backgroundColor = "#333";
-                btn.classList.add("btncolor1");
+        icon.onclick = function () {
+            document.body.classList.toggle("dark-theme");
+            if (document.body.classList.contains("dark-theme")) {
+                icon.src = "images/sun.png";
             } else {
-                icon.classList.remove("fa-moon");
-                icon.classList.add("fa-sun");
-                document.body.style.backgroundColor = "#fff";
-                btn.classList.add("btncolor2");
+                icon.src = "images/moon.png";
             }
-        })
-
+        }
     </script>
-
 </body>
 
 </html>
